--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Liberia</title>
   </head>
   <body>
-    <h1>Liberia</h1>
+    <header class="main_header">
+      <h1>Liberia</h1>
+    </header>
 
     <div class="overview">
       <div class="flag">
@@ -99,6 +101,37 @@
         </div>
       </div>
     </div>
+    <!--Footer Section-->
+    <footer>
+      <div class="footer">
+        <div class="footer_info">
+          <ul>
+            <li>FAQ</li>
+            <li>About</li>
+            <li>Support</li>
+          </ul>
+        </div>
+        <div class="social">
+          <ul>
+            <li>
+              <a href=""><img src="/facebook.png" /></a>
+            </li>
+            <li>
+              <a href=""><img src="/instagram.png" /></a>
+            </li>
+            <li>
+              <a href=""><img src="/twitter.png" /></a>
+            </li>
+            <li>
+              <a href=""><img src="/youtube.png" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <hr />
+      <p class="footer_text">&copy;2022 The Liberian Information GateWay</p>
+    </footer>
     <!--Added Script-->
     <script src="action.js"></script>
   </body>
