--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
         <div class="social">
           <ul>
             <li>
-              <a href=""><img src="/facebook.png" /></a>
+              <a href=""><img src="./facebook.png" /></a>
             </li>
             <li>
-              <a href=""><img src="/instagram.png" /></a>
+              <a href=""><img src="./instagram.png" /></a>
             </li>
             <li>
-              <a href=""><img src="/twitter.png" /></a>
+              <a href=""><img src="./twitter.png" /></a>
             </li>
             <li>
-              <a href=""><img src="/youtube.png" /></a>
+              <a href=""><img src="./youtube.png" /></a>
             </li>
           </ul>
         </div>
